--- a/misc/folder/other/linja-laso/index.html
+++ b/misc/folder/other/linja-laso/index.html
@@ -12,6 +12,6 @@
         <h1>linja laso</h1>
         <nav class="top"><a href="home">weka</a><div class="space"></div><a href="#">back to top</a></nav>
     <main>
-        <p>laso pi mute ante  li pali e linja ni e lipu ni</p>
+        <p>jan li wawa la ona li ken pali e wile ona tawa wile ona. ijoijoijo.</p>
     </main></body>
 </html>
