--- a/misc/folder/mante/names.html
+++ b/misc/folder/mante/names.html
@@ -24,17 +24,26 @@
                 (name changer) leaderboard:</p>
                 <ul>
                     <li><b>kulupu ko:</b> 141 changes</li>
-                    <li><b>the motan:</b> 67 changes</li>
+                    <li><b>the motan:</b> 68 changes</li>
                     <li><b>The Planet Mercury:</b> 55 changes</li>
-                    <li><b>tabby:</b> 27 changes</li>
-                    <li><b>jan Seli:</b> 19 changes</li>
-                    <li><b>kala Asi:</b> 17 changes</li>
+                    <li><b>tabby:</b> 31 changes</li>
+                    <li><b>jan Seli:</b> 21 changes</li>
+                    <li><b>kala Asi:</b> 19 changes</li>
                     <li><b>mu Temi:</b> 6 changes</li>
                     <li><b>mute ante:</b> 2 changes</li>
                 </ul>
                 <p>mute ante li pali e lipu ni</p>
         </details>
         <h2>2024</h2><ul id="name list 2024">
+            <li>26/4:<b> le chat au chocolat </b><span class="name">tabby</span></li><br>
+            <li>23/4:<b> le chat </b><span class="name">tabby</span></li><br>
+            <li>18/2:<b> ma visit pi friend they </b><span class="name">the motan</span></li><br>
+            <li>17/2:<b> ma pi visit pi friend they </b><span class="name">jan Seli</span></li><br>
+            <li>15/4:<b> ma visit pi their friend </b><span class="name">tabby</span></li><br>
+            <li>14/2:<b> ma œ pi ijœ </b><span class="name">jan Seli</span></li><br>
+            <li>10/3:<b> ma œ pi œ </b><span class="name">tabby</span></li><br>
+            <li>9/4:<b> oe </b><span class="name">kala Asi</span></li><br>
+            <li>3/4:<b> monsi, tawa mante nasin sina </b><span class="name">kala Asi</span></li><br>
             <li>2/4:<b> back to your regularly scheduled mante </b><span class="name">the motan</span></li><br>
             <li>31/3:<b> ma ante pi ijo ante </b><span class="name">the motan</span></li><br>
             <li>23/2:<b> nasin esipo </b><span class="name">jan Seli</span></li><br>
