changed note padding in the corridor

--- a/corridor.html
+++ b/corridor.html
@@ -16,7 +16,7 @@
             a{color: black; transition: all .5s cubic-bezier(0,1,0,1)}
             a:hover{background-color: black; color: white; text-decoration: black}
 
-            #note{border: solid 1px white; margin: 24px 0; padding: 12px; width: fit-content}
+            #note{border: solid 1px white; margin: 24px 0; padding: 8px 12px; width: fit-content}
             summary{font-weight: 900; list-style-type: '→ ';}
             details[open] > summary {list-style-type: '↓ ';
                 border-bottom: dotted 1px white; 
