--- a/corridor.html
+++ b/corridor.html
@@ -16,10 +16,13 @@
             a{color: black; transition: all .5s cubic-bezier(0,1,0,1)}
             a:hover{background-color: black; color: white; text-decoration: black}
 
-            #note{border: solid 1px white; margin: 24px 0; padding: 8px 12px; width: fit-content}
+            #note{border: solid 1px white; margin: 24px 0; padding: 8px 12px; 
+                width: fit-content; transition: all .5s cubic-bezier(0,1,0,1)}
+            #note:hover, #note[open]{border-color: yellowgreen; background-color: yellowgreen; color: black}
+            #note > ::selection{color: yellowgreen}
             summary{font-weight: 900; list-style-type: '→ ';}
             details[open] > summary {list-style-type: '↓ ';
-                border-bottom: dotted 1px white; 
+                border-bottom: dotted 1px black; 
                 padding-bottom: 8px; margin-bottom: 8px;}
 
         </style></head>
