--- a/sitelog.html
+++ b/sitelog.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8" name="viewport" content="width=device-width, initial-scale=1">
         <link href="style.css" rel="stylesheet" type="text/css" media="all">
         <title>sitelog</title><style>
-            back{--back: black;
+            body{--back: black;
                 --text: orange;
                 --color: sienna;
                 --max: 600px;
