made the enter link a box

--- a/index.html
+++ b/index.html
@@ -13,8 +13,10 @@
             main{margin: auto; width: fit-content}
             h1{margin: 0}
             ::selection{background-color: black; color: white}
-            a{color: black; transition: all .5s cubic-bezier(0,1,0,1)}
-            a:hover{background-color: black; color: white; text-decoration: black}
+            a{color: black; transition: all .5s cubic-bezier(0,1,0,1);
+                text-decoration: none; border: solid 2px; padding: 4px 8px;}
+            a:hover{background-color: black; color: white; text-decoration: black;
+                border-color:black}
         </style></head>
     <body><main>
         <h1>NOWHERE IN<br>PARTICULAR</h1><div style="margin-top: 24px"><h1><a href="corridor">enter ↘</a></span></h1></div>
