--- a/sitelog.html
+++ b/sitelog.html
@@ -19,6 +19,8 @@
                 border-left: solid 1px sienna;
                 padding-left: 12px;}
 
+            a:hover{background-color: orange}
+
             @media (max-width: 600px) {
                 body{display: block}
                 header{height:auto; border-right: none; border-bottom: solid 1px var(--color);
