--- a/sitelog.html
+++ b/sitelog.html
@@ -19,7 +19,7 @@
                 border-left: solid 1px sienna;
                 padding-left: 12px;}
 
-            a:hover{background-color: orange}
+            a:hover{background-color: orange; text-decoration-color: orange}
 
             @media (max-width: 600px) {
                 body{display: block}
