--- a/404.html
+++ b/404.html
@@ -17,7 +17,7 @@
 
             p:last-child{margin-top: 8px}
             a{outline: 1px solid black; text-decoration: none; 
-            padding: 4px 8px 4px 0; outline-offset: 0px; transition: all .5s cubic-bezier(0,1,0,1)}
+            padding: 4px 8px; outline-offset: 0px; transition: all .5s cubic-bezier(0,1,0,1)}
 
             a:hover{background-color: orangered; color: black;
             outline-color: black; outline-offset: -2px}
