--- a/corridor.html
+++ b/corridor.html
@@ -42,7 +42,7 @@
             expect more stuff here in the future!<br><br>-- cvni81
         </p></details>
         <p>Aside from that, you see doors on either side of the corridor, but you can only enter
-            an orange one on your left.
+            an orange one on your right.
         </p>
         <nav>
             <h2 style="text-align: right;"><a id='sitelog' href="sitelog">sitelog →</a></h2>
