--- a/corridor.html
+++ b/corridor.html
@@ -41,8 +41,8 @@
             of OFL fonts!<br>ig its a party trick of mine. or a sign of adhd.<br>so yeah. 
             expect more stuff here in the future!<br><br>-- cvni81
         </p></details>
-        <p>Aside from that, you see doors on either side of the corridor, but you can only enter
-            an orange one on your right.
+        <p>Aside from that, you see doors on either side of the corridor, all shut and unopenable.
+            The only thing is a computer at the end of the corridor.
         </p>
         <nav>
             <h2 style="text-align: right;"><a id='sitelog' href="sitelog">sitelog →</a></h2>
