made the siteloog button centered

--- a/corridor.html
+++ b/corridor.html
@@ -45,7 +45,7 @@
             The only thing is a computer at the end of the corridor.
         </p>
         <nav>
-            <h2 style="text-align: right;"><a id='sitelog' href="sitelog">sitelog →</a></h2>
+            <h2 style="text-align: center;"><a id='sitelog' href="sitelog">sitelog →</a></h2>
         </nav>
     </main>
     </body>
