--- a/sitelog.html
+++ b/sitelog.html
@@ -33,7 +33,7 @@
     <body><header><h1>site&shy;log</h1>
         <nav><a href="#">↑ top</a> <a href="corridor">↩ back</a></nav></header>
     <main>
-        <p>As you approach the computer, you notice another note, saying that the links shown
+        <p style="margin-bottom: 24px">As you approach the computer, you notice another note, saying that the links shown
             will lead to nowhere, since this space is being rebuilt.
             Knowing that, you boot up the computer and hear a buzz from the CRT.
             After a few seconds, a log appears in delightful amber of changes done to this space 
