--- a/corridor.html
+++ b/corridor.html
@@ -42,7 +42,7 @@
             expect more stuff here in the future!<br><br>-- cvni81
         </p></details>
         <p>Aside from that, you see doors on either side of the corridor, all shut and unopenable.
-            The only thing is a computer at the end of the corridor.
+            The only other thing is a computer at the end of the corridor.
         </p>
         <nav>
             <h2 style="text-align: center;"><a id='sitelog' href="sitelog">sitelog →</a></h2>
