--- a/sitelog.html
+++ b/sitelog.html
@@ -10,7 +10,7 @@
                 --max: 600px;
                 font-family: 'Inconsolata', monospace}
             
-            h1, h3{font-weight: 900}
+            h1, h3, b{font-weight: 900}
 
             h3{margin: 0; color: sienna}
             h3::before{content: "> "} 
