made the marquee pause when you hover. wow features

--- a/corridor.html
+++ b/corridor.html
@@ -40,6 +40,7 @@
             .marquee > div {animation: linear 20s marquee infinite;
                 white-space: nowrap; display: flex; gap: 8px;
                 width: fit-content}
+            .marquee > div:hover{animation-play-state: paused;}
             #statuscafe{display: flex; gap: 8px}
             #statuscafe-username{display: none}
             #statuscafe_link{text-decoration-color: chocolate;}
