added buttons page

--- a/corridor.html
+++ b/corridor.html
@@ -60,8 +60,8 @@
             expect more stuff here in the future!<br><br>-- cvni81
         </p></details>
         <p>You see doors on either side of the corridor, all shut and unopenable.
-            There is also a marquee above the entrance door, an info board to your right and
-            a computer at the very end.
+            There is also a marquee above the entrance door, an info board to your right,
+            a pinboard to the left and a computer at the very end.
         </p>
         <div class="marquee"><div>
             <p><a href="https://status.cafe/users/cvni81" id="statuscafe_link">latest status</a><b>:</b> </p><div id="statuscafe"><div id="statuscafe-username"></div><div id="statuscafe-content"></div></div><script src="https://status.cafe/current-status.js?name=cvni81" defer></script>
