a:hover in mante div

--- a/buttons/index.html
+++ b/buttons/index.html
@@ -30,10 +30,7 @@
             #mante:not(:hover){border-color: var(--color); color: var(--text);
                 border-radius: 0; box-shadow: 0px 0px var(--back); background-color: var(--back)}
             #mante:not(:hover) a{color: var(--text); text-decoration-color: var(--color);}
-            #mante a:hover{background-color: #003621; color: #e0ffe8}
-
-            td.webring-prev a{content: "← previous"}
-            td.webring-next a{content: "next →"}
+            #mante a:hover{background-color: #e0ffe8}
 
             @media (max-width: 600px) {
                 body{display: block}
