added the buttonboard to the corridor!

--- a/buttons/index.html
+++ b/buttons/index.html
@@ -59,7 +59,7 @@
     <main>
         <p style="margin-bottom: 24px">You approach the pin board, painted with soft shades of blue.
             Here you see buttons that lead you to other sites the webmasters like, acquaintances or found
-            on status.cafe, As well as a couple of their own to bring home and add to your own website corridor.</p>
+            on status.cafe. There's also a couple of their own to bring home and add to your own website corridor.</p>
         <details><summary>our buttons</summary>
             <p style="margin-bottom: 16px">These are from the previous redesign, but they look good still so i'll keep them here. More buttons
                 (hopefully) in the works.
@@ -68,9 +68,9 @@
             </p>
             <div id="our_buttons">
                 <div><img src="88x31.gif"><br>
-                <textarea>&lt;a href="https://cvni1981.github.io/website"&gt;&lt;img src="https://cvni1981.github.io/website/buttons/88x31.gif" alt="nowhere in particular"&gt;&lt;/a&gt;</textarea></div>
+                <textarea>&lt;a href="https://cvni1981.github.io/website"&gt;&lt;img src="88x31.gif" alt="nowhere in particular"&gt;&lt;/a&gt;</textarea></div>
                 <div><img src="static.gif"><br>
-                <textarea>&lt;a href="https://cvni1981.github.io/website"&gt;&lt;img src="https://cvni1981.github.io/website/buttons/static.gif" alt="nowhere in particular"&gt;&lt;/a&gt;</textarea></div>
+                <textarea>&lt;a href="https://cvni1981.github.io/website"&gt;&lt;img src="static.gif" alt="nowhere in particular"&gt;&lt;/a&gt;</textarea></div>
             </div>
         </details>
         <h2>acquaintances</h2>
