--- a/corridor.html
+++ b/corridor.html
@@ -20,8 +20,9 @@
 
             nav h2{display: inline-block; width: 100%; margin: 12px 0}
 
-            #sitelog:hover{color: orange; border-color: sienna;}
             #about:hover{background-color: ghostwhite; color: royalblue}
+            #buttons:hover{background-color: lightsteelblue; color: royalblue;}
+            #sitelog:hover{color: orange; border-color: sienna;}
 
             #note{border: solid 1px white; margin: 24px 0; padding: 8px 12px; 
                 width: fit-content; transition: all .5s cubic-bezier(0,1,0,1)}
@@ -68,6 +69,7 @@
         </div></div>
         <nav>
             <h2 style="text-align: right;"><a id='about' href="about">about →</a></h2>
+            <h2 style="text-align: left;"><a id='buttons' href="buttons">← buttons</a></h2>
             <h2 style="text-align: center;"><a id='sitelog' href="sitelog">sitelog →</a></h2>
         </nav>
     </main>
