removed top button, not necessary

--- a/buttons/index.html
+++ b/buttons/index.html
@@ -55,7 +55,7 @@
                 nav a{display: inline}}
         </style></head>
     <body><header><h1>but&shy;tons</h1>
-        <nav><a href="#">↑ top</a> <a href="../corridor">← back</a></nav></header>
+        <nav><a href="../corridor">← back</a></nav></header>
     <main>
         <p style="margin-bottom: 24px">You approach the pin board, painted with soft shades of blue.
             Here you see buttons that lead you to other sites the webmasters like, acquaintances or found
