made summary text the same style as h1 and h2

--- a/buttons/index.html
+++ b/buttons/index.html
@@ -10,7 +10,7 @@
                 font-weight: 300;
                 font-family: 'Fraunces', sans-serif}
 
-            h1, h2{font-weight: 600; font-style: italic;}
+            h1, h2, summary{font-weight: 600; font-style: italic;}
             h2::before{content: "→ "; color: var(--color)}
 
             header{order: 1; text-align: left;
