made mante shadow 4px

--- a/buttons/index.html
+++ b/buttons/index.html
@@ -31,7 +31,7 @@
                 border-radius: 0; box-shadow: 0px 0px var(--back); background-color: var(--back)}
             #mante:not(:hover) a{color: var(--text); text-decoration-color: var(--color);}
             #mante a:hover{background-color: #e0ffe8}
-            #mante:hover{border-color: #e0ffe8;}
+            #mante:hover{border-color: #e0ffe8; box-shadow: 4px 4px #63b695}
 
             details:hover, details[open]{background-color: palevioletred; border-color: palevioletred;
                 color: rgb(43, 0, 27)}
