fixed left padding in main

--- a/buttons/index.html
+++ b/buttons/index.html
@@ -50,7 +50,7 @@
                 header{height:auto; border-left: none; border-bottom: solid 1px var(--color);
                     background-color: var(--back); text-align: right;
                     max-width: none; position:sticky; top: calc(-2em - 10px); padding: 0 24px}
-                main{max-width: 40rem}
+                main{max-width: 40rem; padding-left: 24px}
                 nav{display:block;}
                 nav a{display: inline}}
         </style></head>
