added fonts page

--- a/buttons/index.html
+++ b/buttons/index.html
@@ -91,7 +91,7 @@
             <a href="https://noodledesk.net/" class="button"><img src="noodlebutton.gif" alt="noodle desk"></a>
             <a href="https://lazybones.neocities.org/" class="button"><img src="lazybonesicon4.png" alt="lazybones"></a>
             <a href="https://status.cafe" class="button"><img src="https://status.cafe/assets/button.png" alt="Status Cafe"></a>
-            <a href="https://status.cafe/users/cvni81"><img src="https://status.cafe/users/cvni81/badge.png" alt="Status Cafe Profile"/></a>
+            <a href="https://status.cafe/users/cvni81" class="button"><img src="https://status.cafe/users/cvni81/badge.png" alt="Status Cafe Profile"/></a>
         </div>
         <div id='mante'>
             <script type="text/javascript" src="https://the-blob-system.neocities.org/mante_webring/onionring-variables.js"></script>
