added fonts page to the corridor!

--- a/corridor.html
+++ b/corridor.html
@@ -22,6 +22,7 @@
 
             #about:hover{background-color: ghostwhite; color: royalblue}
             #buttons:hover{background-color: lightsteelblue; color: royalblue;}
+            #fonts:hover{color: deeppink; border-color: deeppink;}
             #sitelog:hover{color: orange; border-color: sienna;}
 
             #note{border: solid 1px white; margin: 24px 0; padding: 8px 12px; 
@@ -70,6 +71,7 @@
         <nav>
             <h2 style="text-align: right;"><a id='about' href="about">about →</a></h2>
             <h2 style="text-align: left;"><a id='buttons' href="buttons">← buttons</a></h2>
+            <h2 style="text-align: right;"><a id='fonts' href="fonts">fonts →</a></h2>
             <h2 style="text-align: center;"><a id='sitelog' href="sitelog">sitelog →</a></h2>
         </nav>
     </main>
