--- a/corridor.html
+++ b/corridor.html
@@ -57,11 +57,11 @@
             new things and my feelings change. as does everything tbh<br>so. i'm redoing and
             reorganizing things around here. like adding this corridor. makes it more obvious
             that this is a real place yk<br>
-            and with all the doors you see i plan to add a bunch of stuff, including my stash
-            of OFL fonts!<br>ig its a party trick of mine. or a sign of adhd.<br>so yeah. 
+            and with all the doors you see i plan to add a bunch of stuff, <s>including my stash
+            of OFL fonts!</s><br>ig its a party trick of mine. or a sign of adhd.<br>so yeah. 
             expect more stuff here in the future!<br><br>-- cvni81
         </p></details>
-        <p>You see doors on either side of the corridor, all shut and unopenable.
+        <p>You see doors on either side of the corridor, all shut and unopenable except for one on your left.
             There is also a marquee above the entrance door, an info board to your right,
             a pinboard to the left and a computer at the very end.
         </p>
@@ -70,6 +70,7 @@
         </div></div>
         <nav>
             <h2 style="text-align: right;"><a id='about' href="about">about →</a></h2>
+            <h2 style="text-align: left;"><a id='bookmarks' href="bookmarks">← bookmarks</a></h2>
             <h2 style="text-align: left;"><a id='buttons' href="buttons">← buttons</a></h2>
             <h2 style="text-align: center;"><a id='sitelog' href="sitelog">sitelog →</a></h2>
         </nav>
