made the bookmarks button in the corridor match

--- a/corridor.html
+++ b/corridor.html
@@ -21,6 +21,7 @@
             nav h2{display: inline-block; width: 100%; margin: 12px 0}
 
             #about:hover{background-color: ghostwhite; color: royalblue}
+            #bookmarks:hover{background-color: #0d0542; color: #ffb135; border-color: #ffb135;}
             #buttons:hover{background-color: lightsteelblue; color: royalblue;}
             #fonts:hover{color: deeppink; border-color: deeppink;}
             #sitelog:hover{color: orange; border-color: sienna;}
