--- a/bookmarks.html
+++ b/bookmarks.html
@@ -9,7 +9,8 @@
                 --color: #c3c0ff;
                 font-family: 'Uncut Sans', sans-serif}
 
-            h2::before, h1::before{content: "→ "; color: var(--color)}
+            h1::before{content: "→"; color: var(--color)}
+            h2::before{content: "→ "; color: var(--color)}
             h2{margin-bottom: 8px}
             h2 a{text-decoration-thickness: 2px;}
             p{margin-left: 24px}
@@ -31,7 +32,7 @@
                 nav{display:block;}
                 nav a{display: inline}}
         </style></head>
-    <body><header><h1>book&shy;marks</h1>
+    <body><header><h1>&nbsp;book&shy;marks</h1>
         <nav><a href="#">↑ top</a> <a href="corridor">← back</a></nav></header>
     <main>
         <p style="margin: 0">You enter the room and see several bookcases, with resources and links to other websites.</p>
