added misc and basement

--- a/corridor.html
+++ b/corridor.html
@@ -23,7 +23,7 @@
             #about:hover{background-color: ghostwhite; color: royalblue}
             #bookmarks:hover{background-color: #0d0542; color: #ffb135; border-color: #ffb135;}
             #buttons:hover{background-color: lightsteelblue; color: royalblue;}
-            #fonts:hover{color: deeppink; border-color: deeppink;}
+            #basement:hover{background-color: aliceblue; color: darkslategray}
             #sitelog:hover{color: orange; border-color: sienna;}
 
             #note{border: solid 1px white; margin: 24px 0; padding: 8px 12px; 
@@ -62,7 +62,7 @@
             of OFL fonts!</s><br>ig its a party trick of mine. or a sign of adhd.<br>so yeah. 
             expect more stuff here in the future!<br><br>-- cvni81
         </p></details>
-        <p>You see doors on either side of the corridor, all shut and unopenable except for one on your left.
+        <p>You see doors on either side of the corridor, all shut and unopenable except for two.
             There is also a marquee above the entrance door, an info board to your right,
             a pinboard to the left and a computer at the very end.
         </p>
@@ -73,8 +73,19 @@
             <h2 style="text-align: right;"><a id='about' href="about">about →</a></h2>
             <h2 style="text-align: left;"><a id='bookmarks' href="bookmarks">← bookmarks</a></h2>
             <h2 style="text-align: left;"><a id='buttons' href="buttons">← buttons</a></h2>
+            <h2 style="text-align: right;"><a id='basement' href="basement">basement →</a></h2>
             <h2 style="text-align: center;"><a id='sitelog' href="sitelog">sitelog →</a></h2>
         </nav>
     </main>
     </body>
 </html>
+<!--
+    about.
+    .bookmarks
+    blender.
+    .doodles
+    words.
+    .buttons
+    basement.
+    sitelog.
+-->
