--- a/basement/misc/index.html
+++ b/basement/misc/index.html
@@ -27,6 +27,7 @@
         </p>
         <ul role="navigation" id="objects">
             <li><a href="journal">open the notebook</a></li>
+            <li><a href="wall">look at the wall</a></li>
         </ul>
     </main>
     </body>
