--- a/404.html
+++ b/404.html
@@ -24,7 +24,7 @@
 
         </style></head>
     <body><main>
-        <p>You entered a door that doesn't exist. somehow.</p><p><a href="/website/corridor">↙ back to corridor</a></p>
+        <p>You entered a door that doesn't exist. somehow.</p><p><a href="/corridor">↙ back to corridor</a></p>
     </main>
     </body>
 </html>
